--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <!-- Link to the Manifest File -->
+  <link rel="manifest" href="/manifest.webmanifest">
+
+  <!-- Optional: Add a theme color -->
+  <meta name="theme-color" content="#000000">
+
+  <!-- Link to the icons for PWA -->
+  <link rel="icon" href="/product-images/android-chrome-192x192.png" sizes="192x192" type="image/png">
+  <link rel="icon" href="/product-images/android-chrome-512x512.png" sizes="512x512" type="image/png">
+  
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
